Member name text ellipsis added

--- a/app/globals.css
+++ b/app/globals.css
@@ -124,6 +124,14 @@ input[type=number] {
   color:black;
 }
 
+.cardBreak{
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 
 @layer base {
   :root {
